--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
 			  <nav id="nav-menu-container">
 				<ul class="nav-menu">
 				  <li><a href="index.html">Beranda</a></li> 
-				  <li><a href="tentang.html">Tentang Kami</a></li>
+				  <!-- <li><a href="tentang.html">Tentang Kami</a></li> -->
 				  <li><a href="materi.html">Materi</a></li>
-				  <!-- <li><a href="pelatihan.html">Pelatihan</a></li> -->
+				  <li><a href="#">Sumbang Materi</a></li>
 				  <li><a href="kegiatan.html">Kegiatan</a></li>
+				  <li><a href="#">Daftar Relawan</a></li>
 				  <!-- <li class="menu-has-children"><a href="">Blog</a>
 					<ul>
 					  <li><a href="blog-home.html">Blog Home</a></li>
@@ -83,7 +84,7 @@
 						  </li>					                		
 					</ul>
 				  </li>					          					          		           -->
-				  <li><a href="hubungi.html">Hubungi Kami</a></li>
+				  <!-- <li><a href="hubungi.html">Hubungi Kami</a></li> -->
 				</ul>
 			  </nav><!-- #nav-menu-container -->		    		
 			</div>
@@ -100,10 +101,16 @@
 							Periksa Fakta!! 
 							<br>Sadar Data Sebelum Bicara			
 						</h1>
-						<p class="pt-10 pb-10">
+						<p class="pt-10 pb-10" style="font-size: 20px;">
 							Belajar secara online bagaimana caranya berpikir kritis menggunakan nalar untuk menanggapi berbagai isu global yang lagi viral dalam konteks lokal.
 						</p>
-						<a href="materi.html" class="primary-btn text-uppercase">Get Started</a>
+						<button class="primary-btn">
+								<a href="materi.html">
+									GET STARTED
+								</a>
+						</button>
+
+
 					</div>										
 				</div>
 			</div>					
@@ -322,8 +329,7 @@
 				<div class="row justify-content-between align-items-center">
 					<div class="col-lg-6 col-md-6 search-course-left">
 						<h1 class="text-white">
-							Berhenti Sejenak <br>
-							Sebelum Jempol Bertindak !!
+							Tentang Kami 
 						</h1>
 						<p>
 							Di jaman now yang serba digital, semua orang bisa berbagi apa saja dengan cepat, mudah, dan instan. Padahal nggak semua pesan teks berantai, berita, konten viral tersebut relevan buat hidup kita dan bisa dipercaya kebenarannya. Itu sebabnya literasi media dan digital sangat penting. Yuk, kembangkan keterampilan berpikir kritis !!
