--- a/materi.html
+++ b/materi.html
@@ -109,193 +109,6 @@
 		</div>
 	</section>
 	<!-- End banner Area -->	
-		 
-	  
-
-
-
-		<!-- start banner Area -->
-		<!-- <section class="banner-area relative" id="home">
-			<div class="overlay overlay-bg"></div>
-			<div class="container">				
-				<div class="row d-flex align-items-center justify-content-center">
-					<div class="about-content col-lg-12">
-						
-						<h1 class="text-white left" >
-							Materi Pengajaran Gratis Untuk 
-							Melatih Berpikir Kritis				
-						</h1>	
-						<p class="left">Materi kurikulum dirancang dan didukung oleh mitra-mitra Mafindo yang berkomitmen berpikir kritis di era digital. 
-						<br>Pilih topik berikut ini untuk menyelenggarakan pembelajaran yang seru dan interaktif.</p>
-					</div>	 
-				</div>
-			</div>
-		</section> -->
-		<!-- End banner Area -->	
-			
-		<!-- Start events-list Area -->
-		<!-- <section class="events-list-area section-gap event-page-lists">
-			<div class="container">
-				<div class="row align-items-center">
-					<div class="col-lg-6 pb-30">
-						<div class="single-carusel row align-items-center">
-							<div class="col-12 col-md-6 thumb">
-								<img class="img-fluid" src="img/e1.jpg" alt="">
-							</div>
-							<div class="detials col-12 col-md-6">
-								<p>25th February, 2018</p>
-								<a href="event-details.html"><h4>The Universe Through
-								A Child S Eyes</h4></a>
-								<p>
-									For most of us, the idea of astronomy is something we directly connect to “stargazing”, telescopes and seeing magnificent displays in the heavens.
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-6 pb-30">
-						<div class="single-carusel row align-items-center">
-							<div class="col-12 col-md-6 thumb">
-								<img class="img-fluid" src="img/e2.jpg" alt="">
-							</div>
-							<div class="detials col-12 col-md-6">
-								<p>25th February, 2018</p>
-								<a href="event-details.html"><h4>The Universe Through
-								A Child S Eyes</h4></a>
-								<p>
-									For most of us, the idea of astronomy is something we directly connect to “stargazing”, telescopes and seeing magnificent displays in the heavens.
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-6 pb-30">
-						<div class="single-carusel row align-items-center">
-							<div class="col-12 col-md-6 thumb">
-								<img class="img-fluid" src="img/e1.jpg" alt="">
-							</div>
-							<div class="detials col-12 col-md-6">
-								<p>25th February, 2018</p>
-								<a href="event-details.html"><h4>The Universe Through
-								A Child S Eyes</h4></a>
-								<p>
-									For most of us, the idea of astronomy is something we directly connect to “stargazing”, telescopes and seeing magnificent displays in the heavens.
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-6 pb-30">
-						<div class="single-carusel row align-items-center">
-							<div class="col-12 col-md-6 thumb">
-								<img class="img-fluid" src="img/e2.jpg" alt="">
-							</div>
-							<div class="detials col-12 col-md-6">
-								<p>25th February, 2018</p>
-								<a href="event-details.html"><h4>The Universe Through
-								A Child S Eyes</h4></a>
-								<p>
-									For most of us, the idea of astronomy is something we directly connect to “stargazing”, telescopes and seeing magnificent displays in the heavens.
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-6 pb-30">
-						<div class="single-carusel row align-items-center">
-							<div class="col-12 col-md-6 thumb">
-								<img class="img-fluid" src="img/e1.jpg" alt="">
-							</div>
-							<div class="detials col-12 col-md-6">
-								<p>25th February, 2018</p>
-								<a href="event-details.html"><h4>The Universe Through
-								A Child S Eyes</h4></a>
-								<p>
-									For most of us, the idea of astronomy is something we directly connect to “stargazing”, telescopes and seeing magnificent displays in the heavens.
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-6" pb-30>
-						<div class="single-carusel row align-items-center">
-							<div class="col-12 col-md-6 thumb">
-								<img class="img-fluid" src="img/e2.jpg" alt="">
-							</div>
-							<div class="detials col-12 col-md-6">
-								<p>25th February, 2018</p>
-								<a href="event-details.html"><h4>The Universe Through
-								A Child S Eyes</h4></a>
-								<p>
-									For most of us, the idea of astronomy is something we directly connect to “stargazing”, telescopes and seeing magnificent displays in the heavens.
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-6 pb-30">
-						<div class="single-carusel row align-items-center">
-							<div class="col-12 col-md-6 thumb">
-								<img class="img-fluid" src="img/e1.jpg" alt="">
-							</div>
-							<div class="detials col-12 col-md-6">
-								<p>25th February, 2018</p>
-								<a href="event-details.html"><h4>The Universe Through
-								A Child S Eyes</h4></a>
-								<p>
-									For most of us, the idea of astronomy is something we directly connect to “stargazing”, telescopes and seeing magnificent displays in the heavens.
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-6">
-						<div class="single-carusel row align-items-center">
-							<div class="col-12 col-md-6 thumb">
-								<img class="img-fluid" src="img/e2.jpg" alt="">
-							</div>
-							<div class="detials col-12 col-md-6">
-								<p>25th February, 2018</p>
-								<a href="#"><h4>The Universe Through
-								A Child S Eyes</h4></a>
-								<p>
-									For most of us, the idea of astronomy is something we directly connect to “stargazing”, telescopes and seeing magnificent displays in the heavens.
-								</p>
-							</div>
-						</div>
-					</div>																		
-					<a href="#" class="text-uppercase primary-btn mx-auto mt-40">Load more courses</a>		
-				</div>
-			</div>	
-		</section> -->
-		<!-- End events-list Area -->
-
-		<!-- Search Start -->
-		<!-- <section class="search-section">
-			<div class="container">
-				<div class="search-warp">
-					<div class="section-title text-white">
-						<h2>Materi Interaktif</h2>
-					</div>
-					<div class="row">
-						<div class="col-md-10 offset-md-1"> -->
-							<!-- search form -->
-							<!-- <form class="course-search-form">
-								<input type="text" placeholder="Materi">
-								<input type="text" class="last-m" placeholder="Kategori">
-								<button class="site-btn">Cari</button>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section> -->
-		<!-- <section>
-			<div class="container main-menu">
-				<nav class="menu-kategori text-align-center">
-					<ul class="nav-menu text-black text-center">
-						<li><a href="#" >Beranda</a></li> 
-						<li><a href="#" >Tentang Kami</a></li>
-						<li><a href="#" >Materi</a></li>
-						<li><a href="#" >Pelatihan</a></li>
-						<li><a href="#" >Kegiatan</a></li>
-					</nav>
-				</nav>
-			</div>
-		</section> -->
 		<!-- Search End -->
 
 		<!-- Start Kategori -->
@@ -345,7 +158,7 @@
 							</div>
 							<div class="course-info">
 								<div class="course-text">
-									<h5><a class="judul" href="detail-materi.html">Berdaya Internet</a></h5>
+									<h5><a sclass="judul" href="detail-materi.html" style="color: #fb0808;">Berdaya Internet</a></h5>
 									<p>Mulai dari menjelajahi media digital untuk mencari informasi, mampu memahami pesan serta berbagai perlindungan privasi dan data pribadi, hingga berkolaborasi dengan orang lain melalui teknologi digital.</p>
 									<div class="students">Dewasa</div>
 								</div>
@@ -365,7 +178,7 @@
 							</div>
 							<div class="course-info">
 								<div class="course-text">
-									<h5><a class="judul" href="detail-materi.html">Berdaya Internet</a></h5>
+									<h5><a class="judul" href="detail-materi.html" style="color: #fb0808;">Berdaya Internet</a></h5>
 									<p>Mulai dari menjelajahi media digital untuk mencari informasi, mampu memahami pesan serta berbagai perlindungan privasi dan data pribadi, hingga berkolaborasi dengan orang lain melalui teknologi digital.</p>
 									<div class="students">Lansia</div>
 								</div>
@@ -385,7 +198,7 @@
 							</div>
 							<div class="course-info">
 								<div class="course-text">
-									<h5><a class="judul" href="detail-materi.html">Berdaya Internet</a></h5>
+									<h5><a class="judul" href="detail-materi.html" style="color: #fb0808;">Berdaya Internet</a></h5>
 									<p>Mulai dari menjelajahi media digital untuk mencari informasi, mampu memahami pesan serta berbagai perlindungan privasi dan data pribadi, hingga berkolaborasi dengan orang lain melalui teknologi digital.</p>
 									<div class="students">Umum</div>
 								</div>
@@ -405,7 +218,7 @@
 							</div>
 							<div class="course-info">
 								<div class="course-text">
-									<h5><a class="judul" href="detail-materi.html">Internet dan Ruang Kelas</a></h5>
+									<h5><a class="judul" href="detail-materi.html" style="color: #fb0808;">Internet dan Ruang Kelas</a></h5>
 									<p>Mulai dari menjelajahi media digital untuk mencari informasi, mampu memahami pesan serta berbagai perlindungan privasi dan data pribadi, hingga berkolaborasi dengan orang lain melalui teknologi digital.</p>
 									<div class="students">Anak-anak</div>
 								</div>
@@ -425,7 +238,7 @@
 							</div>
 							<div class="course-info">
 								<div class="course-text">
-									<h5><a class="judul" href="detail-materi.html">Internet dan Ruang Kelas</a></h5>
+									<h5><a class="judul" href="detail-materi.html" style="color: #fb0808;">Internet dan Ruang Kelas</a></h5>
 									<p>Mulai dari menjelajahi media digital untuk mencari informasi, mampu memahami pesan serta berbagai perlindungan privasi dan data pribadi, hingga berkolaborasi dengan orang lain melalui teknologi digital.</p>
 									<div class="students">Dewasa</div>
 								</div>
@@ -445,7 +258,7 @@
 							</div>
 							<div class="course-info">
 								<div class="course-text">
-									<h5><a class="judul" href="detail-materi.html">Internet dan Ruang Kelas</a></h5>
+									<h5><a class="judul" href="detail-materi.html" style="color: #fb0808;">Internet dan Ruang Kelas</a></h5>
 									<p>Mulai dari menjelajahi media digital untuk mencari informasi, mampu memahami pesan serta berbagai perlindungan privasi dan data pribadi, hingga berkolaborasi dengan orang lain melalui teknologi digital.</p>
 									<div class="students">Lansia</div>
 								</div>
@@ -465,7 +278,7 @@
 							</div>
 							<div class="course-info">
 								<div class="course-text">
-									<h5><a class="judul" href="detail-materi.html">Internet dan Ruang Kelas</a></h5>
+									<h5><a class="judul" href="detail-materi.html" style="color: #fb0808;">Internet dan Ruang Kelas</a></h5>
 									<p>Mulai dari menjelajahi media digital untuk mencari informasi, mampu memahami pesan serta berbagai perlindungan privasi dan data pribadi, hingga berkolaborasi dengan orang lain melalui teknologi digital.</p>
 									<div class="students">Umum</div>
 								</div>
@@ -484,7 +297,7 @@
 							</div>
 							<div class="course-info">
 								<div class="course-text">
-									<h5><a class="judul" href="detail-materi.html">Internet dan Kesehatan</a></h5>
+									<h5><a class="judul" href="detail-materi.html" style="color: #fb0808;">Internet dan Kesehatan</a></h5>
 									<p>Mulai dari menjelajahi media digital untuk mencari informasi, mampu memahami pesan serta berbagai perlindungan privasi dan data pribadi, hingga berkolaborasi dengan orang lain melalui teknologi digital.</p>
 									<div class="students">Anak-anak</div>
 								</div>
@@ -503,7 +316,7 @@
 							</div>
 							<div class="course-info">
 								<div class="course-text">
-									<h5><a class="judul" href="detail-materi.html">Internet dan Kesehatan</a></h5>
+									<h5><a class="judul" href="detail-materi.html" style="color: #fb0808;">Internet dan Kesehatan</a></h5>
 									<p>Mulai dari menjelajahi media digital untuk mencari informasi, mampu memahami pesan serta berbagai perlindungan privasi dan data pribadi, hingga berkolaborasi dengan orang lain melalui teknologi digital.</p>
 									<div class="students">Dewasa</div>
 								</div>
@@ -522,7 +335,7 @@
 							</div>
 							<div class="course-info">
 								<div class="course-text">
-									<h5><a class="judul" href="detail-materi.html">Internet dan Kesehatan</a></h5>
+									<h5><a class="judul" href="detail-materi.html" style="color: #fb0808;">Internet dan Kesehatan</a></h5>
 									<p>Mulai dari menjelajahi media digital untuk mencari informasi, mampu memahami pesan serta berbagai perlindungan privasi dan data pribadi, hingga berkolaborasi dengan orang lain melalui teknologi digital.</p>
 									<div class="students">Lansia</div>
 								</div>
@@ -541,7 +354,7 @@
 							</div>
 							<div class="course-info">
 								<div class="course-text">
-									<h5><a class="judul" href="detail-materi.html">Internet dan Kesehatan</a></h5>
+									<h5><a class="judul" href="detail-materi.html" style="color: #fb0808;">Internet dan Kesehatan</a></h5>
 									<p>Mulai dari menjelajahi media digital untuk mencari informasi, mampu memahami pesan serta berbagai perlindungan privasi dan data pribadi, hingga berkolaborasi dengan orang lain melalui teknologi digital.</p>
 									<div class="students">Umum</div>
 								</div>
@@ -560,52 +373,7 @@
 		<!-- Kategori End-->
 
 		<!-- Materi Populer  -->
-		<!-- <section class="section-fitur relative">
-			<div class="featured-courses">
-				<div class="featured-course course-item">
-					<div class="course-thumb set-bg" data-setbg="img/Img_Pel4.jpg">
-						
-					</div>
-					<div class="row">
-						<div class="col-lg-6 offset-lg-6 pl-0">
-							<div class="course-info">
-								<div class="course-text">
-									<div class="fet-note">Materi Populer</div>
-									<h5><a href="detail-materi.html">Internet Damai</a></h5>
-									<p>Dalam tatanan masyarakat demokrasi, media massa memegang peranan penting sebagai sarana diseminasi informasi, baik dari pemerintah ke masyarakat maupun dari masyarakat ke masyarakat</p>
-									<div class="students">Umum</div>
-								</div>
-								<div class="course-author">
-									<div class="ca-pic set-bg" data-setbg="img/abdurahman-wahid.jpg"></div>
-									<p>Tarisa, <span>Kominfo</span></p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="featured-course course-item">
-					<div class="course-thumb set-bg" data-setbg="img/Img_Pel5.jpg"> -->
-						<!-- <div class="price">Price: $15</div> -->
-					<!-- </div>
-					<div class="row">
-						<div class="col-lg-6 pr-0">
-							<div class="course-info">
-								<div class="course-text">
-									<div class="fet-note">Materi Unggulan</div>
-									<h5><a href="detail-materi.html">Menjadi Warga Digital</a></h5>
-									<p>Mengeksplorasi media digital agar dapat berpartisipasi secara aktif dalam interaksi masyarakat digital sekaligus mengasah keterampilan analisis dan berpikir kritis mengenai pertukaran wacana di platform digital.</p>
-									<div class="students">Umum</div>
-								</div>
-								<div class="course-author">
-									<div class="ca-pic set-bg" data-setbg="img/abdurahman-wahid.jpg"></div>
-									<p>Tarisa, <span>Tim Mafindo</span></p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-		</section> -->
-		<!-- End Materi Populer -->
+		
 		<!-- Start cta-two Area -->
 		<section class="cta-two-area">
 			<div class="container">
