--- a/kegiatan.html
+++ b/kegiatan.html
@@ -251,7 +251,7 @@
 							</div>
 							</div><br>
 							<div class="social-nav row no-gutters">
-								<a href="kegiatan.html" class="primary-btn text-uppercase mx-auto" >Selengkapnya></a>	
+								<!-- <a href="kegiatan.html" class="primary-btn text-uppercase mx-auto" >Selengkapnya></a>	 -->
 							</div>	<br>
 							</section>
 							
